remove cross-account pattern from product catalog
also:
correct builder reference name
add versioning
remove missed unnecessary quotes

--- a/product-catalog/api/serverless.yml
+++ b/product-catalog/api/serverless.yml
@@ -8,14 +8,9 @@ custom:
   helloRetail: ${file(../../helloRetail.yml)}
   retailStreamVersion: 1
   retailStream: ${file(../../retail-stream/serverless.yml)}
-  productCatalogVersion: 1
-  productCatalog: ${file(../builder/serverless.yml)}
-  # Product Catalog Versions & Exports
-  # WARNING: each project that uses these will have to define the following two attributes (custom.productCatalogApiVersion, custom.productCatalogApi) in its serverless.yml:
-  productCatalogApiVersion: 1 # The version of this service to depend upon
-  productCatalogApi: ${self:} # externally, use `${file(~/product-catalog/api/serverless.yml)}`, replacing the `~` therein with the appropriate relative reference [e.g. '..' or '../..']
-  # Exports
-  exportProductCatalogApiClient: ${self:custom.productCatalogApi.service}:${self:custom.stage}:ProductCatalogTableName:${self:custom.productCatalogVersion}
+  productCatalogBuilderVersion: 1
+  productCatalogBuilder: ${file(../builder/serverless.yml)}
+  productCatalogApiVersion: 1
 
 provider:
   name: aws
@@ -32,7 +27,7 @@ functions:
     environment:
       STAGE: ${self:custom.stage}
       TABLE_PRODUCT_CATEGORY_NAME:
-        Fn::ImportValue: ${self:custom.productCatalog.custom.exportProductCategoryTableName}
+        Fn::ImportValue: ${self:custom.productCatalogBuilder.custom.exportProductCategoryTableName}
     events:
       - http:
           path: categories
@@ -45,7 +40,7 @@ functions:
     environment:
       STAGE: ${self:custom.stage}
       TABLE_PRODUCT_CATALOG_NAME:
-        Fn::ImportValue: ${self:custom.productCatalog.custom.exportProductCatalogTableName}
+        Fn::ImportValue: ${self:custom.productCatalogBuilder.custom.exportProductCatalogTableName}
     events:
       - http:
           path: products
@@ -70,19 +65,14 @@ resources:
       Type: AWS::IAM::Role
       Properties:
         Path: /
-        RoleName: ${self:custom.stage}ProductCatalogApiCategoriesReader
+        RoleName: ${self:custom.stage}ProductCatalogApiCategoriesReader${self:custom.productCatalogApiVersion}
         AssumeRolePolicyDocument:
           Version: 2012-10-17
           Statement:
             - Effect: Allow
               Action: sts:AssumeRole
               Principal:
-                AWS: # role ARNs that are allowed to read from the Product Catalog
-                  - 'arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.private.teamRole}'
-            - Effect: Allow
-              Action: sts:AssumeRole
-              Principal:
-                Service: 'lambda.amazonaws.com'
+                Service: lambda.amazonaws.com
         ManagedPolicyArns:
           - ${self:custom.private.teamPolicy}
         Policies:
@@ -111,20 +101,15 @@ resources:
                    Action:
                      - 'dynamodb:Scan'
                    Resource:
-                    Fn::ImportValue: ${self:custom.productCatalog.custom.exportProductCategoryTableArn}
+                    Fn::ImportValue: ${self:custom.productCatalogBuilder.custom.exportProductCategoryTableArn}
     ProductCatalogApiProductsReader: # role for Products Lambda
       Type: AWS::IAM::Role
       Properties:
         Path: /
-        RoleName: ${self:custom.stage}ProductCatalogApiProductsReader
+        RoleName: ${self:custom.stage}ProductCatalogApiProductsReader${self:custom.productCatalogApiVersion}
         AssumeRolePolicyDocument:
           Version: 2012-10-17
           Statement:
-            - Effect: Allow
-              Action: sts:AssumeRole
-              Principal:
-                AWS: # role ARNs that are allowed to read from the Product Catalog
-                  - 'arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.private.teamRole}'
             - Effect: Allow
               Action: sts:AssumeRole
               Principal:
@@ -158,45 +143,9 @@ resources:
 #                   Action:
 #                     - 'dynamodb:GetItem'
 #                   Resource:
-#                    Fn::ImportValue: ${self:custom.productCatalog.custom.exportProductCatalogTableArn}
+#                    Fn::ImportValue: ${self:custom.productCatalogBuilder.custom.exportProductCatalogTableArn}
                 -  Effect: Allow
                    Action:
                      - 'dynamodb:Query'
                    Resource:
-                    Fn::ImportValue: ${self:custom.productCatalog.custom.exportProductCatalogTableCategoryIndexArn}
-    ApiClient: # role for consumers of the Product Catalog API
-      Type: AWS::IAM::Role
-      Properties:
-        Path: /
-        RoleName: ${self:custom.stage}ProductCatalogApiClient${self:custom.productCatalogApiVersion}
-        AssumeRolePolicyDocument:
-          Version: 2012-10-17
-          Statement:
-            - Effect: Allow
-              Action: sts:AssumeRole
-              Principal:
-                AWS: # role ARNs that are allowed to read from the Product Catalog
-                  - 'arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.private.teamRole}'
-        ManagedPolicyArns:
-          - ${self:custom.private.teamPolicy}
-        Policies:
-          - PolicyName: ReadFromApi
-            PolicyDocument:
-              Version: 2012-10-17
-              Statement:
-                - Effect: Allow
-                  Action:
-                    - 'execute-api:Invoke'
-                  Resource:
-                    Fn::Join:
-                      - ''
-                      - - 'arn:aws:execute-api:${self:provider.region}:${self:custom.private.accountId}:'
-                        - Ref: ApiGatewayRestApi
-                        - '/${self:custom.stage}/*/*'
-  Outputs:
-    ProductCatalogApiClient:
-      Description: A role for clients of the Product Catalog API
-      Value:
-        Ref: ApiClient
-      Export:
-        Name: ${self:custom.productCatalogApi.custom.exportProductCatalogApiClient}
+                    Fn::ImportValue: ${self:custom.productCatalogBuilder.custom.exportProductCatalogTableCategoryIndexArn}
