--- a/product-photos/2.message/serverless.yml
+++ b/product-photos/2.message/serverless.yml
@@ -21,7 +21,6 @@ functions:
       'Fn::GetAtt': [ MessageRole, Arn ]
     handler: message.handler
     environment:
-      STAGE: ${self:custom.stage}
       TABLE_PHOTO_ASSIGNMENTS_NAME:
         Fn::ImportValue: ${self:custom.productPhotos.exportPhotoAssignmentsTableName}
       TWILIO_ACCOUNT_SID_ENCRYPTED: ${self:custom.private.twilio.accountSid}
@@ -43,7 +42,7 @@ resources:
         Path: /
         RoleName: ${self:custom.stage}ProductPhotosMessage${self:custom.productPhotos.productPhotosVersion}
         AssumeRolePolicyDocument:
-          Version: 2012-10-17
+          Version: '2012-10-17'
           Statement:
             - Effect: Allow
               Action: sts:AssumeRole
@@ -54,7 +53,7 @@ resources:
         Policies:
           - PolicyName: CreateAndWriteToLogStream
             PolicyDocument:
-              Version: 2012-10-17
+              Version: '2012-10-17'
               Statement:
                 - Effect: Allow
                   Action:
