--- a/user-info/api/serverless.yml
+++ b/user-info/api/serverless.yml
@@ -13,9 +13,7 @@ custom:
   userInfoApiVersion: 1
   userInfoApi: ${self:}
   # Exports
-  exportUserInfoClientArn: ${self:custom.userInfoApi.service}:${self:custom.stage}:UserInfoClientArn
-  exportUserInfoReaderWriterArn: ${self:custom.userInfoApi.service}:${self:custom.stage}:UserInfoReaderWriterArn
-  exportUserInfoRestAPI: ${self:custom.userInfoApi.service}:${self:custom.stage}:UserInfoRestAPI
+  exportUserInfoRestApi: ${self:custom.userInfoApi.service}:${self:custom.stage}:UserInfoRestApi${self:custom.userInfoApiVersion}
 
 provider:
   name: aws
@@ -30,9 +28,6 @@ functions:
       Fn::GetAtt: [ UserInfoReaderWriter, Arn ]
     handler: userInfoApi.loginUser
     environment:
-      STAGE: ${self:custom.stage}
-      STREAM_WRITER_ROLE:
-        Fn::ImportValue: ${self:custom.retailStream.custom.exportRetailStreamWriterArn}
       STREAM_NAME:
         Fn::ImportValue: ${self:custom.retailStream.custom.exportRetailStreamName}
     events:
@@ -56,9 +51,6 @@ functions:
       Fn::GetAtt: [ UserInfoReaderWriter, Arn ]
     handler: userInfoApi.updatePhone
     environment:
-      STAGE: ${self:custom.stage}
-      STREAM_WRITER_ROLE:
-        Fn::ImportValue: ${self:custom.retailStream.custom.exportRetailStreamWriterArn}
       STREAM_NAME:
         Fn::ImportValue: ${self:custom.retailStream.custom.exportRetailStreamName}
     events:
@@ -82,9 +74,6 @@ functions:
       Fn::GetAtt: [ UserInfoReaderWriter, Arn ]
     handler: userInfoApi.addRole
     environment:
-      STAGE: ${self:custom.stage}
-      STREAM_WRITER_ROLE:
-        Fn::ImportValue: ${self:custom.retailStream.custom.exportRetailStreamWriterArn}
       STREAM_NAME:
         Fn::ImportValue: ${self:custom.retailStream.custom.exportRetailStreamName}
     events:
@@ -122,53 +111,16 @@ resources:
         LogGroupName: /aws/lambda/${self:service}-${self:custom.stage}-addRole
         RetentionInDays: 7
 
-    # User Information Roles
-    UserInfoClient: # role for consumers of the User Information API
-      Type: AWS::IAM::Role
-      Properties:
-        Path: /
-        RoleName: ${self:custom.stage}UserInfoClient
-        AssumeRolePolicyDocument:
-          Version: 2012-10-17
-          Statement:
-            - Effect: Allow
-              Action: sts:AssumeRole
-              Principal:
-                AWS: # role ARNs that are allowed to call the User Info API
-                  - 'arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.private.teamRole}'
-                  - 'arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.stage}HelloRetailWebIdentity'
-        ManagedPolicyArns:
-          - ${self:custom.private.teamPolicy}
-        Policies:
-          - PolicyName: ReadFromApi
-            PolicyDocument:
-              Version: 2012-10-17
-              Statement:
-                - Effect: Allow
-                  Action:
-                    - 'execute-api:Invoke'
-                  Resource:
-                    Fn::Join:
-                      - ''
-                      - - 'arn:aws:execute-api:${self:provider.region}:${self:custom.private.accountId}:'
-                        - Ref: ApiGatewayRestApi
-                        - '/${self:custom.stage}/*/*'
-
     # TODO: When implementing builder, create new role and transfer Kinesis read and Dynamo write rights to that service's role
+    # TODO: Consider separating the roles of the lambdas.
     UserInfoReaderWriter: # role for the User Info Lambdas
       Type: AWS::IAM::Role
       Properties:
         Path: /
-        RoleName: ${self:custom.stage}UserInfoReaderWriter
+        RoleName: ${self:custom.stage}UserInfoReaderWriter${self:custom.userInfoApiVersion}
         AssumeRolePolicyDocument:
-          Version: 2012-10-17
+          Version: '2012-10-17'
           Statement:
-            - Effect: Allow
-              Action: sts:AssumeRole
-              Principal:
-                AWS: # role ARNs that are allowed to call the User Info API
-                  - 'arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.private.teamRole}'
-                  - 'arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.stage}RetailStreamWriter'
             - Effect: Allow
               Action: sts:AssumeRole
               Principal:
@@ -178,7 +130,7 @@ resources:
         Policies:
           - PolicyName: CreateAndWriteToLogStream
             PolicyDocument:
-              Version: 2012-10-17
+              Version: '2012-10-17'
               Statement:
                 - Effect: Allow
                   Action:
@@ -197,49 +149,15 @@ resources:
                       - ':'
                       - - Fn::GetAtt: [ AddRoleLogGroup, Arn ]
                         - '*'
-          - PolicyName: ReadFromKinesis
+          - PolicyName: WriteToKinesis
             PolicyDocument:
-              Version: 2012-10-17
+              Version: '2012-10-17'
               Statement:
                 - Effect: Allow
                   Action:
-                    - 'kinesis:GetRecords'
-                    - 'kinesis:GetShardIterator'
-                    - 'kinesis:DescribeStream'
-                    - 'kinesis:ListStreams'
                     - 'kinesis:PutRecord'
                   Resource:
                     Fn::ImportValue: ${self:custom.retailStream.custom.exportRetailStreamArn}
-          - PolicyName: WriteToUserInfo
-            PolicyDocument:
-              Version: 2012-10-17
-              Statement:
-                -  Effect: Allow
-                   Action:
-                     - 'dynamodb:UpdateItem'
-                     - 'dynamodb:PutItem'
-                   Resource:
-                    Fn::Join:
-                      - '/'
-                      - - 'arn:aws:dynamodb:${self:provider.region}:${self:custom.private.accountId}:table'
-                        - Ref: UserInfoTable
-
-
-    # User Info Tables
-    UserInfoTable:
-      Type: 'AWS::DynamoDB::Table'
-      Properties:
-        AttributeDefinitions:
-          - AttributeName: id
-            AttributeType: S
-        KeySchema:
-          - AttributeName: id
-            KeyType: HASH
-        ProvisionedThroughput:
-          ReadCapacityUnits: 1
-          WriteCapacityUnits: 1
-        TableName: '${self:custom.stage}-UserInfo-${self:custom.userInfoApiVersion}'
-
 
 #    # NOTE: These names gleaned from SLS generated CF template
 #    # MAY BE INCOMPLETE, resulting in inability to auth :(
@@ -254,21 +172,9 @@ resources:
 #        AuthorizationType: AWS_IAM
 
   Outputs:
-    UserInfoClientArn:
-      Description: Arn for role used by clients of the User Info API
-      Value:
-        Fn::GetAtt: [ UserInfoClient, Arn ]
-      Export:
-        Name: ${self:custom.userInfoApi.custom.exportUserInfoClientArn}
-    UserInfoReaderWriterArn:
-      Description: A role allowing for reading from kinesis and writing to dynamo
-      Value:
-        Fn::GetAtt: [ UserInfoReaderWriter, Arn ]
-      Export:
-        Name: ${self:custom.userInfoApi.custom.exportUserInfoReaderWriterArn}
     UserInfoRestAPI:
       Description: API used to submit user information
       Value:
         Ref: ApiGatewayRestApi
       Export:
-        Name: ${self:custom.userInfoApi.custom.exportUserInfoRestAPI}
+        Name: ${self:custom.userInfoApi.custom.exportUserInfoRestApi}
